--- a/module_0/assets/css/style.css
+++ b/module_0/assets/css/style.css
@@ -8,6 +8,9 @@ header, footer {
 h2 {
   padding: 2%;
 }
+.container {
+  margin-top: -2%;
+}
 .item-a {
   height: 150px;
   background-color: #817878;
@@ -57,10 +60,11 @@ h2 {
 }
 .item-e {
   position: absolute;
-  width: 96.5%;
+  width: 98.5%;
   height: 100px;
   background-color: #428A16;
-  margin: 0.8%;
+  margin-bottom: 0.7%;
+  margin-left: 0.75%;
   bottom:0;
 }
 .item-a,
@@ -73,7 +77,27 @@ h2 {
 .item-e {
 	border-radius: 10px;
 }
-
-.container {
-  margin: 1%;
+header.header {
+  margin-top: -2%;
+}
+.header > h2 {
+  font-size: 46px;
+}
+.header, .footer {
+  background-color: magenta;
+}
+.navigation, .sidebar, article.item-c2 {
+  background-color: blue;
+}
+.footer > h2 {
+  font-size: 10px;
+}
+.content > h2 {
+  font-size: 14px;
+}
+.navigation > h2 {
+  font-size: 12px;
+}
+.sidebar > h2 {
+  font-size: 10px;
 }
