--- a/module_0/assets/css/style.css
+++ b/module_0/assets/css/style.css
@@ -12,6 +12,7 @@ h2 {
   margin-top: -2%;
 }
 .item-a {
+  box-sizing: border-box;
   height: 150px;
   background-color: #817878;
   margin: 0.8%;
@@ -33,18 +34,21 @@ h2 {
   float: left;
 }
 .item-c1 {
+  box-sizing: border-box;
   margin: 2%;
   margin-top: 3%;
   height: 75px;
   background-color: #5B3E7F;
 }
 .item-c2 {
+  box-sizing: border-box;
   margin: 2%;
   margin-top: 2%;
   height: 130px;
   background-color: #5B3E7F;
 }
 .item-c3 {
+  box-sizing: border-box;
   margin: 2%;
   margin-top: 2%;
   height: 75px;
@@ -59,6 +63,7 @@ h2 {
   float: left;
 }
 .item-e {
+  box-sizing: border-box;
   position: absolute;
   width: 98.5%;
   height: 100px;
