--- a/module_1/assets/css/style.css
+++ b/module_1/assets/css/style.css
@@ -38,6 +38,7 @@ section {
   height: 340px;
   float: right;
   background-color: #2F769F;
+  overflow: auto;
 }
 .item-e {
   height: 100px;
@@ -75,8 +76,11 @@ section {
 .navigation > h2 {
   font-size: 12px;
 }
+li {
+  font-size: 13px;
+}
 .sidebar > h2 {
-  font-size: 10px;
+  font-size: 30px;
 }
 .content {
   font-size: 30px;
@@ -101,6 +105,11 @@ section {
 }
 .spinner {
   max-width: 100px;
+}
+.searchform {
+  float: right;
+  margin-top: -20px;
+  margin-right: 50px;
 }
 @keyframes fade_in {
   from {opacity: 0;}
